--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!--<style name="Theme.CryptoDotComExercise" parent="android:Theme.Material.Light.NoActionBar">-->
-    <!--    <item name="android:statusBarColor">@color/purple_700</item>-->
-    <!--</style>-->
-
-    <style name="Theme.CryptoDotComExercise" parent="@style/Theme.AppCompat.NoActionBar">
+    <style name="Theme.CryptoDotComExercise" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="android:statusBarColor">@color/purple_700</item>
     </style>
 
